# Multi_KCF-Tracking

./: CMakeLists.txt
include/: medflt.h  tools.h
src/: example.cpp  kcftracker.cpp  kcftracker.hpp  testRunTracker.cpp
